tests/invalid_sem/com/com04.java
class Main {
    static void run() {
        int b;
    }
    static int a = "";
}
